feat: make credential template optional in requests
