# docs/v1/openapi.yaml
@@ -908,8 +908,12 @@ components:
             - type: string
             - type: object
           description: Credential in jws(string) or jsonld(object) formats.
-      required:
-        - credential
+        credential_template_id:
+          type: string
+          description: Credential template id
+        claims:
+          type: object
+          description: Should be specified if using credential template
     UpdateCredentialStatusRequest:
       title: UpdateCredentialStatusRequest
       x-tags:
